# service-runner

./: .dockerignore  .gitignore  Cargo.toml  README.md  config.toml  sampleConfig.yml  todo.txt
client/: Cargo.toml
client/src/: app_state.rs  client_state.rs  input.rs  main.rs  process_client.rs  rhai.rs  system_state.rs  ui.rs  utils.rs
client/src/config/: mod.rs  models.rs  parsing.rs  settings.rs
client/src/config/keybinds/: block_bindings.rs  common_bindings.rs  keybinding.rs  mod.rs  output_bindings.rs  service_bindings.rs
client/src/config/models/: automation.rs  automation_definition.rs  config.rs  dependency.rs  executable_entry.rs  health_check.rs  keybinds.rs  mod.rs  profile.rs  profile_definition.rs  requirement.rs  service.rs  service_definition.rs  theme.rs
client/src/config/theme/: color.rs  mod.rs
client/src/connection/: broadcast_processor.rs  connect.rs  handler.rs  mod.rs
client/src/model/: mod.rs  system_state.rs
client/src/model/config/: models.rs  parsing.rs
client/src/model/message/: message.rs  mod.rs
client/src/models/: action.rs  autocompile.rs  automation.rs  compile.rs  dependency.rs  exec.rs  mod.rs  output.rs  profile.rs  run.rs  service.rs  status.rs  task.rs
client/src/runner/: action_processor.rs  automation.rs  file_watcher.rs  fingerprint_checker.rs  mod.rs  process_action.rs  query_trigger_handler.rs  rhai.rs  server_state.rs
client/src/runner/scripting/: engine.rs  executor.rs  mod.rs
client/src/runner/service_worker/: async_operation.rs  block_processor.rs  block_worker.rs  compilation.rs  concurrent_operation.rs  create_cmd.rs  fingerprint_checker.rs  mod.rs  process_wrapper.rs  req_checker.rs  requirement_checker.rs  run.rs  sequence_executor.rs  service_block_context.rs  task_context.rs  task_processor.rs  utils.rs  work_context.rs  work_handler.rs  work_sequence_executor.rs  worker.rs
client/src/ui/: actions.rs  init.rs  inputs.rs  mod.rs  profile_select.rs  state.rs  theming.rs
client/src/ui/legacy_screens/: exit.rs  profile_select.rs
client/src/ui/screens/: exit.rs  init.rs  mod.rs  profile_select.rs  select_profile.rs  (+1 more)
server/: Cargo.toml
server/src/: action_processor.rs  connection.rs  file_watcher.rs  main.rs  output_handler.rs  server_state.rs  service_worker.rs
server/src/service_worker/: compilation.rs  mod.rs  run.rs  utils.rs
shared/: Cargo.toml
shared/src/: config.rs  config_parsing.rs  lib.rs  message.rs  system_state.rs  utils.rs
shared/src/config/: mod.rs  models.rs  parsing.rs
shared/src/message/: message.rs  mod.rs  models.rs  transmitter.rs
(+104 files in other folders)
