[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

ratatui = "0.26.1"
crossterm = "0.27.0"
once_cell = "1.17.1"
unicode-segmentation = "1.10.1"