[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.26.1"

notify = "6.1.1"
nix = { version = "0.29.0", features = ["process", "signal"] }
walkdir = "2.5.0"

reqwest = {  version = "0.12.5", features = ["blocking"] }
itertools = "0.13.0"
once_cell = "1.17.1"
unicode-segmentation = "1.10.1"

serde = "1.0.204"
serde-aux = "4.5.0"
serde_derive = "1.0.204"
toml = "0.8.19"

log = "0.4.22"
simple-logging = "2.0.2"