[package]
name = "client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "../ui" }

ratatui.workspace = true
crossterm.workspace = true

notify = "8.2.0"
nix = { version = "0.30.1", features = ["process", "signal"] }
walkdir = "2.5.0"

reqwest = {  version = "0.12.5", features = ["blocking"] }
itertools = "0.14.0"
once_cell = "1.17.1"
unicode-segmentation = "1.10.1"
derive_more = {  version = "2.0.1", features = ["full"] }

serde = "1.0.204"
serde-aux = "4.5.0"
serde_derive = "1.0.204"
serde_path_to_error = "0.1.16"
serde_yaml = "0.9.34+deprecated"
humantime-serde = "1.1.1"
toml = "0.8.19"

rhai = {  version = "1.16.3", features = ["sync"] }

subst = "0.3.8"
glob = "0.3.1"

log = "0.4.22"
simple-logging = "2.0.2"