[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

serde_json = "1.0.95"
once_cell = "1.17.1"
reqwest = { version = "0.11.16", features = ["blocking"] }
notify = "5.1.0"
itertools = "0.10.5"
nix = "0.26.2"