[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde-aux = "4.1.2"
bincode = "1.3.3"
toml = "0.7.3"
walkdir = "2.3.3"